--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,3 +1,15 @@
 $bg-color: #678ff2;
+$color-white: #fff;
+$color-black: #000;
+
+$media-xxl: 1400px;
+$media-xl: 1200px;
+$media-lg: 992px;
+$media-md: 768px;
+$media-sm: 576px;
+$media-min: 428px;
 
 $font-family: 'Roboto', sans-serif;
+
+$container-max-width: 1440px;
+$container-padding-x: 10px;
